Run maven with non-root user (#39)
* Update Maven docker image with maven run as jenkins user

* Fix secretVolume

* Enhance comment

* Update comment